--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grayauth",
   "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "dev": "tsx watch src/index.ts"
   },
@@ -10,6 +11,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.3",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
