--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "type": "module",
   "version": "0.1.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/serve.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.7.4"
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
+    "hono": "^4.7.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
