Add initial app routes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "version": "0.1.0",
   "scripts": {
-    "dev": "tsx watch src/serve.ts"
+    "dev": "tsx watch src/serve.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
