--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NODE_ENV='development'
 
 APP_URL='http://localhost:3000'
 APP_PORT='3000'
+
+DATABASE_URL='postgresql://username:password@localhost:5432/test_db'
