--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "tsx watch src/serve.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint",
+    "db:studio": "drizzle-kit studio",
+    "db:migrate": "drizzle-kit migrate",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.40.1",
     "hono": "^4.7.4",
+    "postgres": "^3.4.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
