--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ NODE_ENV='development'
 APP_URL='http://localhost:3000'
 APP_PORT='3000'
 
+LOG_LEVEL='info'
+
 DATABASE_URL='postgresql://username:password@localhost:5432/test_db'
