--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.40.1",
     "hono": "^4.7.4",
     "postgres": "^3.4.5",
+    "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
